--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,6 @@ h2 {
 
 .search-form {
     width: 270px;
-    min-height: 42px;
     float: left;
     background-color: #293449;
     position: relative;
@@ -172,7 +171,6 @@ input[name="search"] {
     position: absolute;
     top: 10px;
     left: 14px;
-    background-color: inherit;
     font-size: 17px;
     line-height: 18px;
     color: #ffffff;
@@ -191,10 +189,9 @@ input[name="search"]:focus {
     background-color: #ffffff;
 }
 
-input[name="search"]:focus .icon-search {
-    background-color: inherit;
-    color: #ee3643;
+input[name="search"]:focus ~ .icon-search {
     opacity: 1;
+    color: #ee3643;
 }
 
 .icon-bookmark,
@@ -222,19 +219,27 @@ input[name="search"]:focus .icon-search {
     color: #ffffff;
 }
 
+.checkout-order {
+    background-color: #63a63e;
+}
+
+.full {
+    background-color: #ee3643;
+}
+
 .bookmark:hover,
 .basket:hover {
     background-color: #212a3a;
 }
 
 .checkout-order:hover {
-    background-color: #63a63e;
+    background-color: #5fbb2d;
     color: #ffffff;
 }
 
 .checkout-order:active {
-    background-color: #63a63e;
-    opacity: 0.51;
+    background-color: #518534;
+    color: #8b8e94;
 }
 
 .bookmark:hover .icon-bookmark,
@@ -246,12 +251,7 @@ input[name="search"]:focus .icon-search {
 .bookmark:active,
 .basket:active {
     background-color: #161d29;
-}
-
-.bookmark:active .icon-bookmark,
-.basket:active .icon-basket {
-    background-color: #161d29;
-    opacity: 0.3;
+    color: #8b8e94;
 }
 
 .icon-bookmark,
@@ -262,10 +262,10 @@ input[name="search"]:focus .icon-search {
 .about-shop {
     margin: 0 0;
     width: 250px;
-    min-height: 110px;
     float: left;
     padding-left: 50px;;
     margin-right: 20px;
+    margin-bottom: 42px; 
 }
 
 .about-shop p{
@@ -280,10 +280,10 @@ input[name="search"]:focus .icon-search {
 
 .contacts-header {
     width: 300px;
-    min-height: 110px;
     float: left;
     margin-right: 20px;
     text-align: center;
+    margin-bottom: 42px; 
 }
 
 .contacts-header p {
@@ -307,28 +307,31 @@ input[name="search"]:focus .icon-search {
 	font-size: 14px;
 	line-height: 24px;
 	font-weight: normal;
-	color: #32425c;
+	color: #32425c;   
 }
 
 .user-block, .user-cab {
-    width: 300px;
-    min-height: 110px;
-    float: left;
+    /*width: 300px;*/
+    float: right;
 }
 
 .user-block a {
+    margin: 0 0;
     display: inline-block;
-    height: 45px;
+    padding: 13.5px 0;
     background-color: #ffffff;
-    margin-right: 10px;
     font-family: "Cuprum", "Arial", sans-serif;
 	font-size: 21px;
-	line-height: 45px;
+	line-height: 18px;
 	font-weight: normal;
 	color: #000000;
 	/*Не факт что выравнивание по центру, проверить после подключения шрифта и иконок*/
 	text-align: center;
     position: relative;
+}
+
+.user-block a:first-child {
+    margin-right: 20px;
 }
 /*Отступ от картинки до текста ссылки Вход*/
 .icon-login {
@@ -363,8 +366,8 @@ input[name="search"]:focus .icon-search {
 
 .user-name {
     display: inline-block;
-    width: 300px;
-    height: 45px;
+    width: 255px;
+    padding-left: 45px;
     background-color: #ffffff;
     font-family: "Cuprum", "Arial", sans-serif;
 	font-size: 21px;
@@ -372,17 +375,66 @@ input[name="search"]:focus .icon-search {
 	font-weight: normal;
 	color: #000000;
 	margin-bottom: 10px;
-	text-align: center;
+    position: relative;
 }
 
-.user-link {
+.user-name .icon-user {
+    font-size: 18px;
+    line-height: 45px;
+    color: #c5c5c5;
+    position: absolute;
+    left: 10px;
+}
+
+.user-name .icon-logout {
+    font-size: 22px;
+    line-height: 45px;
+    color: #c5c5c5;
+    position: absolute;
+    right: 10px;
+}
+
+.user-name:hover .icon-user,
+.user-name:hover .icon-logout {
+    color: #32425c;
+}
+
+.user-name:active {
+    opacity: 0.3;
+}
+
+.user-link a {
     font-family: "Cuprum", "Arial", sans-serif;
 	font-size: 16px;
 	line-height: 18px;
 	font-weight: normal;
     color: #32425c;
     text-decoration: underline;
-    padding: 0 15px;
+    margin: 0 16px;
+}
+
+.user-link a:hover {
+    color: #ee3643;
+}
+
+.user-link a:active {
+    color: #32425c;
+    opacity: 0.3;
+}
+
+.user-link {
+    position: relative;
+}
+
+.user-link::after {
+    content: "";
+    position: absolute;
+    top: 9px;
+    left: 106px;
+    width: 4px;
+    height: 4px;
+    border-radius: 50%;
+    background-color: #32425c;
 }
 
 .login {
@@ -395,8 +447,8 @@ input[name="search"]:focus .icon-search {
 
 .header-nav {
     background-color: #32425c;
-    box-shadow: 0 5px  #293449;
-    clear: both;    
+    clear: both; 
+    padding: 0 0;  
 }
 
 .header-nav ul {
@@ -404,10 +456,12 @@ input[name="search"]:focus .icon-search {
     padding: 0 0;
     list-style: none;
     font-size: 0;
+    display: table;
+    width: 100%;
 }
 
 .header-nav li {
-    display: inline-block;
+    display: table-cell;
     vertical-align: top;
     font-size: 17px;
     line-height: 17px;
@@ -419,7 +473,8 @@ input[name="search"]:focus .icon-search {
     font-family: "Cuprum", "Arial", sans-serif;
     font-weight: normal;
 	color: #ffffff; 
-    text-decoration: none;    
+    text-decoration: none;
+    border-bottom: 5px solid #293449;    
 }
 
 .header-nav a:hover {
@@ -428,7 +483,7 @@ input[name="search"]:focus .icon-search {
 
 .header-nav a:active {
     background-color: #1d2739;
-    box-shadow: 0 5px #1d2739;
+    border-bottom-color: #1d2739;
 }
 
 main {
@@ -611,8 +666,8 @@ main {
 }
 
 
-.icon-left,
-.icon-right {
+.slider .icon-left,
+.slider .icon-right {
     position: absolute;
     font-family: "symbols-technomart";
     font-size: 45px;
@@ -715,6 +770,18 @@ main {
     margin-left: 20px;
     margin-bottom: 20px;
     text-align: center;
+    position: relative;
+}
+
+.new:before {
+    position: absolute;
+    top: -1px;
+    right: -1px;
+    z-index: 10;
+    width: 60px;
+    height: 60px;
+    content: '';
+    background: url('../img/label-new.png') no-repeat 0 0;
 }
 
 .gallery-item:hover {
@@ -764,9 +831,14 @@ box-shadow: 0 10px 25px 0 rgba(0, 0, 0, 0.5);
     color: #ffffff;
     box-shadow: inset 0 -3px 0 #367315;
     padding: 7px 0;
+    position: relative;
 }
 
 .buy-button .icon-basket {
+    position: absolute;
+    font-size: 17px;
+    top: 10px;
+    left: 12px;
     opacity: 0.3;
 }
 
@@ -1186,17 +1258,6 @@ box-shadow: 0 10px 25px 0 rgba(0, 0, 0, 0.5);
     text-decoration: none
 }
 
-.logo-footer:hover {
-    background-color: #ca2c37;
-    box-shadow: 0 5px #9a212a;
-}
-
-.logo-footer:active {
-    background-color: #ba2732;
-    box-shadow: 0 5px #8e1e26;
-}
-
-
 .footer-adress {
     margin-top: 30px;
     width: 380px;
@@ -1346,62 +1407,308 @@ box-shadow: 0 10px 25px 0 rgba(0, 0, 0, 0.5);
 
 /*Стили для страницы каталога*/
 .breadcrumbs {
-    min-height: 59px;    
+    list-style: none;
+    margin: 20px 0;
+    padding: 0 0;    
 }
 
 .breadcrumbs li {
     display: inline;
-}
-
-.breadcrumbs a {
-    display: inline;
     font-family: "PT Sans", "Arial", sans-serif;
     font-size: 13px;
-	line-height: 59px;
-	font-weight: normal;
-	text-transform: uppercase;
-	color: #000000;
-	margin-right: 20px;
+    line-height: 20px;
+    font-weight: normal;
+    text-transform: uppercase;
+    color: #000000;
+}
+
+
+.breadcrumbs a {
+    text-decoration: none;
+    color: #000000;;
+}
+
+.breadcrumbs .icon-home {
+    font-size: 16px;
+    line-height: 20px;
+    color: #c1c6ce;
+}
+
+.breadcrumbs .icon-right::before {
+    font-size: 14px;
+    line-height: 20px;
+    color: #c1c6ce;
+    margin: 0 10px;
 }
 
 .page-label {
-    height: 89px;
+    margin: 0 0;
+    padding: 30px 0;
+    padding-left: 31px;
     margin-bottom: 20px;
     background-color: #f2f6f8;
     line-height: 89px;
     padding-left: 30px;
+    font-family: "Cuprum", "Arial", sans-serif;
+    font-size: 30px;
+    line-height: 30px;
+    font-weight: normal;
+    color: #32425c;
+    text-transform: uppercase;
 }
 
 .filter {
     width: 220px;
-    min-height: 750px;
     float: left
+}
+
+.filter-label {
+    margin: 0 0;
+    display: block;
+    background-color: #f7f3ec;
+    padding: 10px 0;
+    padding-left: 18px;
+    font-family: "PT Sans", "Arial", sans-serif;
+    font-size: 13px;
+    line-height: 18px;
+    font-weight: normal;
+    text-transform: uppercase;
+    color: #000000;
+}
+
+.range-filter {
+  margin-top: 20px;
+  margin-bottom: 15px;
+  padding-bottom: 25px;
+  border-bottom: 2px solid #e5e5e5;
+}
+
+.range-controls {
+    box-sizing: border-box;
+    position: relative;
+    height: 80px;
+    padding: 0 20px;
+    margin-bottom: 9px;
+    background-color: #f7f3ec; 
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.range-controls .scale {
+    height: 2px;
+    margin-top: 39px;
+    background-color: #d7dcde;
+}
+
+.scale .bar {
+    width: 140px;
+    height: 2px;
+    margin-left: 0;
+    background-color: #00ca74;
+}
+
+.range-controls .toggle {
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    width: 4px;
+    height: 4px;
+    border: 8px solid white;
+    background: #ababab;
+    cursor: pointer;
+    border-radius: 50%;
+    box-shadow: 0 2px rgba(0,0,0,0.12);
+}
+
+.range-controls .min-toggle {
+    left: 20px;
+}
+
+.range-controls .max-toggle {
+    left: 160px;
+}
+
+.price-controls {
+    color: #000;
+    padding-bottom: 25px;
+    margin-bottom: 25px;
+    border-bottom: 2px solid #e5e5e5;
+}
+
+.price-controls input {
+    width: 75px;
+    padding: 8px 10px;
+    border: none;
+    background: #f7f3ec;
+    font-size: 17px;
+    text-align: center;
+    color: #283136;
+    border-radius: 5px;
+    color: #000;
+}
+
+.price-controls span {
+    margin: 0 8px;
+}
+
+.filter fieldset {
+    margin: 0 0;
+    padding: 0 0;
+    border: none;
+    margin-bottom: 15px;
+    border-bottom: 2px solid #e5e5e5
+}
+
+.power-filter fieldset:first-child {
+    border: none;
+}
+
+.filter legend {
+    border: none;
+    padding: 0 0;
+    margin: 0 0;
+    font-size: 17px;
+    line-height: 30px;
+    margin-bottom: 16px;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #000000;
+}
+
+.producer-filter input {
+    display: none;
+
+}
+
+.producer-filter label {
+    display: block;
+    font-family: "PT Sans", "Arial", sans-serif;
+    font-size: 15px;
+    line-height: 20px;
+    font-weight: normal;
+    text-transform: uppercase;
+    color: #000000;
+    margin-bottom: 20px;
+    padding-left: 35px;
+    position: relative;
+    cursor: pointer;
+}
+
+.producer-filter label::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-family: "symbols-technomart";
+    content: "\2610";
+    font-size: 28px;
+    color: #c1c1c1;
+}
+
+.producer-filter input[type="checkbox"]:checked + label::before {
+    content: "\2611";
+}
+
+.power-filter input {
+    display: none;
+}
+
+.power-filter label {
+    display: block;
+    font-family: "PT Sans", "Arial", sans-serif;
+    font-size: 15px;
+    line-height: 20px;
+    font-weight: normal;
+    text-transform: uppercase;
+    color: #000000;
+    margin-bottom: 20px;
+    padding-left: 35px;
+    position: relative;
+    cursor: pointer;
+}
+
+.power-filter label::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-family: "symbols-technomart";
+    content: "\25cb";
+    font-size: 28px;
+    color: #c1c1c1;
+}
+
+.filter label[for*="input"]:hover:before,
+.filter label[for*="radio"]:hover:before {
+    color: #b5b5b5;
+}
+
+.filter label[for*="input"]:hover:active,
+.filter label[for*="radio"]:hover:active {
+    color: #b5b5b5;
+}
+
+.producer-filter input[type="checkbox"]:disabled + label,
+.power-filter input[type="radio"]:disabled + label {
+    opacity: 0.3;
+}
+
+.power-filter input[type="radio"]:checked + label::before {
+    content: "\25cf";
+}
+
+.filter input[type="submit"] {
+    background-color: transparent;
+    display: block;
+    padding: 10px 38px;
+    margin-top: 56px;
+    border: 1px solid #e5e5e5;
+    color: #000000;
+    text-transform: uppercase;
+    font-family: 'PT Sans', 'Arial', sans-serif;
+    font-size: 13px;
+    line-height: 18px;
+    cursor: pointer;
 }
 
 .sort-block {
     width: 700px;
-    height: 38px;
+    box-sizing: border-box;
     background-color: #f7f3ec;
     float: right;
     margin-bottom: 20px;
+    vertical-align: middle;
+    font-size: 0;
+    position: relative;
 }
 
 .sort-block span {
-    display: block;
-    width: 220px;
+    padding: 10px 0;
+    margin-left: 18px;
+    margin-right: 137px;
     float: left;
-    margin-right: 20px;
     font-family: "PT Sans", "Arial", sans-serif;
     font-size: 13px;
-	line-height: 38px;
+	line-height: 18px;
 	font-weight: normal;
 	text-transform: uppercase;
 	color: #000000;
 }
 
+.sort {
+    padding: 0 0;
+    margin: 0 0;
+    float: right;
+    font-family: "PT Sans", "Arial", sans-serif;
+    font-size: 13px;
+    line-height: 18px;
+    font-weight: normal;
+    text-transform: uppercase;
+    color: #000000;
+    margin: 0 0;
+}
+
 .sort li {
     display: inline;
-    margin-right: 65px;
+    margin-right: 60px;
 }
 
 .sort a {
@@ -1410,9 +1717,49 @@ box-shadow: 0 10px 25px 0 rgba(0, 0, 0, 0.5);
 	line-height: 38px;
 	font-weight: normal;
 	text-transform: uppercase;
-	color: #000000;
 	opacity: 0.7;
 	margin-right: 20px;
+    color: #c6c2bd;
+    text-decoration: none;
+    border-bottom: 1px dashed #ee3643;
+}
+
+.sort a:hover {
+    color: #000000;
+    text-decoration: none;
+    border-bottom: 1px solid #ee3643;
+}
+
+.sort a:focus {
+    color: #ee3643;
+    text-decoration: none;
+    border: none;
+}
+
+.icon-up-dir,
+.icon-down-dir {
+    position: absolute;
+    font-size: 23px;
+    line-height: 38px;
+    color: #c6c2bd;
+    text-decoration: none;
+}
+
+.sort-block a:hover {
+    color:#000000;
+}
+
+.sort-block,.active {
+    color: #ee3643;
+}
+
+
+.icon-up-dir {
+    right: 45px;
+}
+
+.icon-down-dir {
+    right: 15px;
 }
 
 .gallery {
@@ -1421,37 +1768,67 @@ box-shadow: 0 10px 25px 0 rgba(0, 0, 0, 0.5);
     margin-bottom: 60px;
 }
 
-.page-nav {
+.page-nav ul {
+    margin: 0 0;
+    padding: 0 0;
     clear: both;
+    list-style: none;
+
 }
-    
-    
-    
+ 
 .page-nav li {
-    display: inline-block;
-    /*При огромном кол-ве страниц (>9999) номер страницы будет выходить за пределы блока.*/
-    width: 38px;
-    height: 38px;
-    border: 1px solid #e5e5e5;
-    border-radius: 3px;
+    display: inline;
     margin-right: 10px;
     margin-top: 50px;
+}
+   
+.page-nav a {
+    display: inline-block;
+    padding: 9px 14.5px;
+    
+    border: 1px solid #e5e5e5;
+    border-radius: 3px;
+
     text-align: center;
-    /*Как выровнять по вертикали правильно ?*/
-    line-height: 43px;
+    font-family: "PT Sans", "Arial", sans-serif;
+    font-size: 13px;
+    line-height: 18px;
+    font-weight: normal;
+    color: #000000;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+
+.page-nav li:last-child a {
+    padding: 9px 31px;
 }
 
 .page-nav li:last-child {
         width: 140px;
 }
 
-.catagory-description {
+.page-nav .active-page {
+    background-color: #ee3643;
+    color: #ffffff;
+}
+
+.page-nav a:hover {
+    border-color: #bdc6ca;
+}
+
+.page-nav a:active {
+    border-color: #ee3643;
+}
+
+.category-description {
     padding: 65px 0;
     background-color: #f2f6f8;
 }
     
-.catagory-description h2 {
-    margin-bottom: 35px;
+.category-description h2 {
+    margin: 0 0;
+    padding: 0 0;
+    margin-bottom: 30px;
     font-family: "Cuprum", "Arial", sans-serif;
 	font-size: 30px;
 	line-height: 30px;
@@ -1460,7 +1837,9 @@ box-shadow: 0 10px 25px 0 rgba(0, 0, 0, 0.5);
 	text-transform: uppercase;
 }
     
-.catagory-description p {
+.category-description p {
+    margin: 0 0;
+    padding: 0 0;
     font-family: "PT Sans", "Arial", sans-serif;
 	font-size: 13px;
 	line-height: 24px;
