Исправлено поведение кнопок в хедер

--- a/css/style.css
+++ b/css/style.css
@@ -254,8 +254,13 @@ input[name="search"]:focus ~ .icon-search {
     color: #8b8e94;
 }
 
+.bookmark:active .icon-bookmark,
+.basket:active .icon-basket  {
+    color: #8b8e94;
+}
+
 .icon-bookmark,
-.icon-basket {
+.icon-basket  {
     padding-right: 13px;
 }
     
@@ -311,7 +316,6 @@ input[name="search"]:focus ~ .icon-search {
 }
 
 .user-block, .user-cab {
-    /*width: 300px;*/
     float: right;
 }
 
@@ -325,7 +329,6 @@ input[name="search"]:focus ~ .icon-search {
 	line-height: 18px;
 	font-weight: normal;
 	color: #000000;
-	/*Не факт что выравнивание по центру, проверить после подключения шрифта и иконок*/
 	text-align: center;
     position: relative;
 }
@@ -333,6 +336,7 @@ input[name="search"]:focus ~ .icon-search {
 .user-block a:first-child {
     margin-right: 20px;
 }
+
 /*Отступ от картинки до текста ссылки Вход*/
 .icon-login {
     padding-right: 12px;
