Исправлен белый фон search input в IE

--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ h2 {
     width: 100%;
     min-height: 42px;
     border: none;
-    background-color: inherit;
+    background-color: #293449;
     font-family: "Cuprum", "Arial", sans-serif;
 	font-size: 17px;
 	line-height: 18px;
