--- a/css/style.css
+++ b/css/style.css
@@ -1901,6 +1901,10 @@ main {
 
 /*Стили модальных окон*/
 
+.modal-content-show {
+    display: block;
+}
+
 /*Модальное окно на главной странице "Заблудились? Напишите нам"*/
 
 .modal-write-us {
@@ -2108,6 +2112,14 @@ main {
     background-color: #ffffff;
     color: #000000;
 }
+
+.modal-actions .continue:hover {
+    text-decoration: underline;
+}
+
+.modal-content-show {
+    display: block;
+}
  
 /*Кнопка выхода на css*/
 
@@ -2115,9 +2127,12 @@ main {
     width: 22px;
     height: 22px;
     cursor: pointer;
+    background-color: transparent;
     margin: 0 0;
     padding: 0 0;
     font-size: 0;
+    border: 0;
+    outline: 0;
 }
 
 
@@ -2127,8 +2142,8 @@ main {
     top: 7px;
     right: -2px;
     content: "";
-    width: 19px;
-    height: 3px;
+    width: 25px;
+    height: 5px;
     background-color: #ee3643;
     border-radius: 1px;
 }
